# clang_link_error

./: Clang.hs  patrick-clang.cabal  test.hs
Clang/: Context.hs  FFI.c  FFI.hs  Nodes.hsc  Types.hsc
cbits/: util.h
examples/: test.c  test.hs
