name:                patrick-clang
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Clang, Clang.Types, Clang.Nodes
  other-modules:       Clang.Context, Clang.FFI
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, lens, inline-c >= 0.5.3.2, containers >= 0.5.6.2, template-haskell >= 2.10, vector >= 0.10.12, bytestring >= 0.10.6
  -- hs-source-dirs:      
  build-tools:         hsc2hs
  default-language:    Haskell2010
  c-sources:           Clang/FFI.c
  include-dirs:        /usr/lib/llvm-3.4/include
  ld-options:          -lclang-3.4
  cc-options:          -Wall
  extra-libraries:     clang-3.4
  ghc-options:         -Wall

executable test
  main-is: test.hs
  hs-source-dirs: examples
  build-depends: base >= 4.8, patrick-clang, lens, bytestring, containers